--- a/css/_footer.scss
+++ b/css/_footer.scss
@@ -1,4 +1,21 @@
-
-footer{
-    background-color: #0f172a;
+footer {
+    background-color: var(--white);
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    ul {
+        justify-content: center;
+        align-items: center;
+        gap: 24px;
+        li {
+            a {
+                font-style: normal;
+                font-weight: 500;
+                font-size: 15px;
+                line-height: 20px;
+                color: #141416;
+            }
+        }
+    }
 }
