--- a/css/_sections.scss
+++ b/css/_sections.scss
@@ -17,9 +17,7 @@
         object-fit: cover;
         height: 560px;
     }
-
 }
-
 
 .abt-two {
     max-width: 360px;
@@ -47,18 +45,18 @@
     padding: 8px 21.5px 10px 21.48px;
     gap: 13px;
     height: 38px;
-    background: #D3EDE6;
+    background: #d3ede6;
     border-radius: 50px;
     width: fit-content;
     text-transform: uppercase;
-    color: #47B298;
+    color: #47b298;
 }
 
 .circle-icon {
     width: 58px;
     height: 58px;
     border-radius: 160px;
-    background-color: #3E5064;
+    background-color: #3e5064;
     flex: 0 0 auto;
     display: flex;
     justify-content: center;
@@ -66,7 +64,7 @@
 }
 
 .bg-hero {
-    background-color: #2A2C40;
+    background-color: #2a2c40;
 }
 
 .box-gray {
@@ -90,4 +88,69 @@
     @media (min-width: 992px) {
         height: 365px;
     }
+}
+
+.white-dec {
+    width: 100%;
+    height: fit-content;
+    background: linear-gradient(180deg, #f6f7fb 0%, #ffffff 100%);
+    border-radius: 20px;
+    padding: 24px;
+    ul {
+        li {
+            font-style: normal;
+            font-weight: 500;
+            font-size: 15px;
+            color: #72777d;
+            list-style: none;
+            background-image: url(../img/dot.svg);
+            background-position: left;
+            background-repeat: no-repeat;
+            padding-left: 16px;
+            margin-bottom: 8px;
+        }
+    }
+}
+
+.devider {
+    width: 100%;
+    height: 0px;
+    opacity: 0.1 !important;
+    border: 3px solid #3e5064;
+}
+
+.bg-main-hero {
+    background-image: url(../img/section.webp);
+    background-attachment: fixed;
+    background-position: center;
+    background-size: cover;
+    text-align: center;
+    h5 {
+        font-style: normal;
+        font-weight: 700;
+        font-size: 12px;
+        color: var(--white);
+    }
+}
+
+.logo-box {
+    width: 100%;
+    height: 100px;
+    background: #fefefe;
+    border: 1px solid #e1e1e1;
+    border-radius: 20px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    overflow: hidden;
+    img{
+        width: 100%;
+        height: 100px;
+        object-fit: contain;
+    }
+}
+
+.bg-contact{
+    width: 100%;
+    background-image: url(../img/bg-contact.webp);
 }
