--- a/css/main.css
+++ b/css/main.css
@@ -2,6 +2,7 @@
 body {
   font-family: "Inter", sans-serif;
   background-color: var(--white);
+  scroll-behavior: smooth;
 }
 
 h1, h2, h3, h4, h5, p, a, div {
