--- a/css/_header.scss
+++ b/css/_header.scss
@@ -75,9 +75,8 @@
 .desk-header {
     position: absolute;
     top: 0px;
-    padding: 24px 100px;
+    padding: 24px;
     background: rgba(31, 35, 52, 0.6);
-
     .barnd {
         img {
             height: 36px;
