--- a/css/_sections.scss
+++ b/css/_sections.scss
@@ -121,10 +121,14 @@
 
 .bg-main-hero {
     background-image: url(../img/section.webp);
-    background-attachment: fixed;
-    background-position: center;
-    background-size: cover;
     text-align: center;
+    background-color: #2a2c40;
+    background-size: cover;
+    background-repeat: no-repeat;
+    @media (min-width: 992px) {
+        background-attachment: fixed;
+        background-position: center;
+    }
     h5 {
         font-style: normal;
         font-weight: 700;
@@ -143,14 +147,24 @@
     align-items: center;
     justify-content: center;
     overflow: hidden;
-    img{
+    img {
         width: 100%;
         height: 100px;
         object-fit: contain;
     }
 }
 
-.bg-contact{
+.bg-contact {
     width: 100%;
     background-image: url(../img/bg-contact.webp);
+}
+
+.box-value {
+    width: 100%;
+    height: auto;
+    padding: 8px 16px;
+    border: 1px solid var(--primary);
+    border-radius: 35px;
+    text-align: center;
+    color: var(--primary);
 }
